Used image from github to :)
I was having issues with making the image for my computer load the image, need to find another way to make this work better

--- a/src/hr_management/authentication/templates/authenticate/login.html
+++ b/src/hr_management/authentication/templates/authenticate/login.html
@@ -6,8 +6,8 @@
 
   <div class="container d-flex align-items-center justify-content-center" style="height: 100vh;">
     
-      <img src="{% static 'img/logo_penguin.png' %}" alt="logo" class="mb-4" style="width: 150px; height: 150px;">
-
+      <img src = "https://github.com/YupiByte/HR-Management/blob/Login-feature/src/hr_management/authentication/templates/authenticate/static/img/logo_penguin.png?raw=true" alt="logo" class="mb-4" style="width: 150px; height: 150px;">
+    <br>
     <form style="width: 400px;" action="" method="post">
     {% csrf_token %}
       <form>
