Separate CSS stylesheet, Worked on General Navigation, Started manage_employees

--- a/src/hr_management/user/templates/index.html
+++ b/src/hr_management/user/templates/index.html
@@ -2,9 +2,11 @@
 <html>
 <body>
 
-<h1>This is the home page</h1>
+<h1>This is the index page</h1>
 
-<p>Page under construction...</p>
+<p> Will Admin and Employee land here first before going to their home page?</p>
+
+<p> URL for admin home page is: <b>localhost:8000/admin_home/</b></p>
 
 </body>
 </html>
