--- a/src/hr_management/user/templates/admin_home.html
+++ b/src/hr_management/user/templates/admin_home.html
@@ -1,9 +1,28 @@
-{% extends "admin_base.html" %}
-
-{% block title %}{{ title }}{% endblock %}
+{% extends "base.html" %}
 
 {% block content %}
-    <h1>{{ title }}</h1>
-    <!-- Administrator view content goes here -->
+
+    <!--Dashboard Blocks-->
+    <div class="division-3">
+        <h2 class="division-3-title">{{title}}</h2>
+        <div class="division-4">
+            <div class="division-4-item">
+                <p>Section 1</p>
+                <button class="button"><a href="{% url 'manage_employees' %}">Employees</a></button>
+            </div>
+            <div class="division-4-item">
+                <p>Section 2</p>
+                <button class="button"><a href="{% url 'tmp' %}">Requests PTO/Sick Days</a></button>
+            </div>
+            <div class="division-4-item">
+                <p>Section 3</p>
+                <button class="button"><a href="{% url 'tmp' %}">Calendar</a></button>
+            </div>
+            <div class="division-4-item">
+                <p>Section 4</p>
+                <button class="button"><a href="{% url 'tmp' %}">Publications</a></button>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
-</div>
