Request Module working as intended, needs some polishing, the employee will be fetched by simply getting the current logged user's employee_id , the request_id will be generated by uuid1 [:8] up to 8 chars, then. View Requests is pending, and to be alloted within the same page :)

--- a/src/hr_management/req_leave/templates/request.html
+++ b/src/hr_management/req_leave/templates/request.html
@@ -14,18 +14,13 @@
 <body>
     <h1> Request Leave Page 🐙</h1>
 
-    <section>
+    <form action="" method="POST"> {% csrf_token %}
 
-        {% for item in request_form %}
-        <h1>{{item.employee_id}} Item: {{item.request_type}}</h1>
-        <p> {{item.start_date|safe}}
-            {{item.end_date|safe}}
+        {{ request_form.as_p }}
 
-        </p>
-        {% endfor %}
-
-    </section>
-
+        <input type="submit" value="Send"/>
+    
+    </form>
 
 </body>
 
