Request Module working as intended, needs some polishing, the employee will be fetched by simply getting the current logged user's employee_id , the request_id will be generated by uuid1 [:8] up to 8 chars, then. View Requests is pending, and to be alloted within the same page :) -- Some CSS added to Publications

--- a/src/hr_management/publication/templates/index.html
+++ b/src/hr_management/publication/templates/index.html
@@ -16,7 +16,7 @@
 
     <section>
 
-        {% for item in data %}
+        {% for item in publication_post %}
         <h1>{{item.title}} Published: {{item.publication_date}}</h1>
         <p> {{item.body_description|safe}}
 
