--- a/src/hr_management/req_leave/templates/request.html
+++ b/src/hr_management/req_leave/templates/request.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <title> Leave Request </title>
-    <link rel="stylesheet" type="text/css" href="{% static 'publication/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'ckeditor/style.css' %}">
 
 </head>
 
