fresh tables, first attempt to CRUD commented...

--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -14,13 +14,14 @@
         <div class="logo-container">
             <img src="{% static 'static/penguin_logo.png' %}" alt="Application Logo" class="navbar-logo">
         </div>
-        <ul class="navbar-section">
+        {% include "navbar.html" %}
+        <!-- <ul class="navbar-section">
             <li><a href="{% url 'admin_home' %}">Home</a></li>
             <li><a href="{% url 'manage_employees' %}">Employees</a></li>
             <li><a href="{% url 'tmp' %}">Requests PTO/Sick Days</a></li>
             <li><a href="{% url 'tmp' %}">Calendar</a></li>
             <li><a href="{% url 'tmp' %}">Publications</a></li>   
-        </ul>
+        </ul> -->
     </div>
 
     <div class="division-2">
