--- a/src/hr_management/user/templates/index.html
+++ b/src/hr_management/user/templates/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html>
-<body>
+
 
 <h1>This is the index page</h1>
 
-<p> Will Admin and Employee land here first before going to their home page?</p>
+<h3> Will Admin and Employee land here before being redirected to the login page?</h3>
 
-<p> URL for admin home page is: <b>localhost:8000/admin_home/</b></p>
-
-</body>
-</html>
+<h3> Link to admin home page: <a href="{% url 'admin_home' %}">Admin Home</a></h3>
