working around creating employee without authentication

--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -2,10 +2,48 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="division-3">
+<p> Hello </p>
+{% endblock %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="division-3">
     <div>
         <h1>Manage Employees</h1>
-        <!-- Filtering options (input fields, search button) -->
+
         <input type="text" id="first_name_filter" placeholder="Filter by First Name">
         <input type="text" id="last_name_filter" placeholder="Filter by Last Name">
         <button id="search_button">Search</button>
@@ -34,7 +72,6 @@
             {% endfor %}
         </tbody>
     </table>
-</div>
+</div> -->
 
-{% endblock %}
 
