--- a/src/hr_management/user/templates/administrator/create_employee.html
+++ b/src/hr_management/user/templates/administrator/create_employee.html
@@ -1,35 +1,33 @@
 {% extends 'base.html' %}
+{% block content %}
+
+
+<div class="col-md-6 offset-md-3">
+<h1>Create Employee</h1>
+<br/>
+
+<form method="POST" action="">
+	{% csrf_token %}
+	{% if form.errors %}
+			<div class="alert alert-warning alert-dismissible fade show" role="alert">
+			  The Form Has Errors
+			  {% for field in form %}
+			  	{% if field.errors %}
+			  		{{ field.errors }}
+			  	{% endif %}
+			  {% endfor %}
+			  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+			</div>
+		{% endif %}
+
+	{{ form.as_p }}
+
+	<br/>
+	  <button type="submit" class="btn btn-secondary">Add Employee</button>
+	</form>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- {% block content %}
-
-<div class="division-3">
-    <div>
-        <h1>{{ title }}</h1>
-            <form method="POST"> {% csrf_token %}
-                {{ form.as_p}} 
-                <input type="submit" value="Save" />
-            </form>
-    </div>
 </div>
 
-{% endblock %} -->
+{% endblock %}
