--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="{% static 'static/base.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Human Resources Inc.</title> 
 </head>
 <body>
@@ -22,7 +23,7 @@
         <img src="{% static 'static/auth.png' %}" alt="Authentication" class="login-icon">
         <button class="help-button">?</button>
 
-        <div class="division-3">{% block content %} {% endblock %}</div>
+        <div class="division-3">{% block content %}  {% endblock %}</div>
 
     </div>
 </body>
