--- a/src/hr_management/user/templates/administrator/employee_record.html
+++ b/src/hr_management/user/templates/administrator/employee_record.html
@@ -42,7 +42,7 @@
 
 <a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
 
-<a href="{% url 'manage_employees' %}" class="btn btn-danger">Delete</a>
+<a href="{% url 'delete_employee' employee_record.id %}" class="btn btn-danger">Delete</a>
 
 <a href="{% url 'manage_employees' %}" class="btn btn-secondary">Update Record</a>
 
