added feature: Add Employee

--- a/src/hr_management/user/templates/administrator/admin_home.html
+++ b/src/hr_management/user/templates/administrator/admin_home.html
@@ -8,15 +8,15 @@
         <div class="division-4">
             <div class="division-4-item">
                 <p>Section 1</p>
-                <button class="button"><a href="{% url 'manage_employees' %}">Employees</a></button>
+                <button class="button"><a href="{% url 'manage_employees' %}">Manage Employees</a></button>
             </div>
             <div class="division-4-item">
                 <p>Section 2</p>
-                <button class="button"><a href="{% url 'tmp' %}">Requests PTO/Sick Days</a></button>
+                <button class="button"><a href="{% url 'tmp' %}">Manage Requests</a></button>
             </div>
             <div class="division-4-item">
                 <p>Section 3</p>
-                <button class="button"><a href="{% url 'tmp' %}">Calendar</a></button>
+                <button class="button"><a href="{% url 'tmp' %}">View Calendar</a></button>
             </div>
             <div class="division-4-item">
                 <p>Section 4</p>
