--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -7,22 +7,21 @@
 
 <nav class="navbar-section">
     <div class="container-fluid">
-        
-          <p class="nav-item">
-            <a class="nav-link" href="{% url 'admin_home' %}">Home</a>
-          </p> 
-          <p class="nav-item">
-            <a class="nav-link" href="{% url 'tmp' %}">PTO/Sick Days Requests</a>
-          </p> 
-          <p class="nav-item">
-            <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
-          </p>
-          <p class="nav-item">
-            <a class="nav-link" href="{% url 'tmp' %}">Publications</a>
-          </p>      
-          <p class="nav-item">
-            <a class="nav-link" href="{% url 'tmp' %}">Calendar</a>
-          </p>   
+      <p class="nav-item">
+        <a class="nav-link" href="{% url 'admin_home' %}">Home</a>
+      </p>
+      <p class="nav-item">
+        <a class="nav-link" href="{% url 'tmp' %}">Requests</a>
+      </p> 
+      <p class="nav-item">
+        <a class="nav-link" href="{% url 'manage_employees' %}">Employees</a>
+      </p>
+      <p class="nav-item">
+        <a class="nav-link" href="{% url 'tmp' %}">Publications</a>
+      </p>      
+      <p class="nav-item">
+        <a class="nav-link" href="{% url 'tmp' %}">Calendar</a>
+      </p>       
           
         </ul>
       </div>
