--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -8,7 +8,13 @@
     <h2 class="division-3-title">{{title}}</h2>
     <br/>
 
-{% if user.is_authenticated %}
+<!-- {% if user.is_authenticated %} -->
+
+<div class="d-grid gap-2 d-md-flex justify-content-md-end">
+  <button href="{% url 'add_employee' %}" class="btn btn-secondary me-md-2">Add Employee</button>
+</div>
+  
+<br/><br/>
 
 
 
@@ -22,31 +28,31 @@
       <th scope="col">ID</th>
     </tr>
   </thead>
+
+
   <tbody>
-    
-{% if employees %}
+<!-- {% if employees %} -->
 	{% for employee in employees %}
 		<tr>
 			<td><a href="{% url 'employee_record' employee.id %}">{{ employee.first_name }} {{ employee.last_name }}</a></td>
 			<td>{{ employee.email }}</td>
-            <td>{{ employee.employee_type }}</td>
+      <td>{{ employee.employee_type }}</td>
 			<td>{{ employee.phone }}</td>
 			<td>{{ employee.id }}</td>
 		</tr>
 	{% endfor %}
-{% endif %}
-
-	
+<!-- {% endif %} -->
 	  </tbody>
 	</table>
 
-    <br/>
-    <a href="{% url 'admin_home' %}" class="btn btn-secondary">Back</a>
+
+  <br/><br/>
+  <a href="{% url 'admin_home' %}" class="btn btn-secondary">Back</a>
+
+  
 
 
-
-{% else %}
-
+<!-- {% else %} -->
 <div class="col-md-6 offset-md-3">
 <h1>Login</h1>
 <br/>
@@ -65,10 +71,7 @@
   <button type="submit" class="btn btn-secondary">Login</button>
 
 </form>
-
-
-
-{% endif %}
+<!-- {% endif %} -->
 
 {% endblock %}
 
