--- a/src/hr_management/user/templates/administrator/employee_record.html
+++ b/src/hr_management/user/templates/administrator/employee_record.html
@@ -8,6 +8,7 @@
         <div class="card-header"><strong>
     	    {{ employee_record.first_name }} 
 		    {{ employee_record.last_name }}</strong>
+            <a href="{% url 'update_employee' employee_record.id%}" class="btn btn-secondary">Update Record</a>
         </div>
 
         <div class="card-body">
@@ -38,12 +39,9 @@
     </div>
 </div>
 
-<br/><br/>
-
 <a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
 
+<br/><br/>
 <a href="{% url 'delete_employee' employee_record.id %}" class="btn btn-danger">Delete</a>
-
-<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Update Record</a>
 
 {% endblock %}
