started adding the authentication features

--- a/src/hr_management/user/templates/administrator/register_employee.html
+++ b/src/hr_management/user/templates/administrator/register_employee.html
@@ -24,8 +24,10 @@
 	{{ form.as_p }}
 
 	<br/>
-	  <button type="submit" class="btn btn-secondary">Add Employee</button>
+	  <button type="submit" class="btn btn-secondary">Register Employee</button>
 	</form>
+	<br/>
+  	<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
 
 </div>
 
