--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -8,12 +8,13 @@
     <h2 class="division-3-title">{{title}}</h2>
     <br/>
 
-<!-- {% if user.is_authenticated %} -->
+{% if user.is_authenticated %}
   
 </div>
   <a href="{% url 'add_employee' %}" class="btn btn-secondary">Add Employee</a>
   <br/><br/>
-
+<a href="{% url 'register_employee' %}" class="btn btn-secondary">Register Employee</a>
+<br/>
 
 <table class="table table-striped table-hover table-bordered">
   <thead>
@@ -28,7 +29,7 @@
 
 
   <tbody>
-<!-- {% if employees %} -->
+{% if employees %}
 	{% for employee in employees %}
 		<tr>
 			<td><a href="{% url 'employee_record' employee.id %}">{{ employee.first_name }} {{ employee.last_name }}</a></td>
@@ -38,9 +39,10 @@
 			<td>{{ employee.id }}</td>
 		</tr>
 	{% endfor %}
-<!-- {% endif %} -->
+{% endif %}
 	  </tbody>
 	</table>
+
 
 
   <br/><br/>
@@ -48,8 +50,7 @@
 
   
 
-
-<!-- {% else %} -->
+{% else %}
 <div class="col-md-6 offset-md-3">
 <h1>Login</h1>
 <br/>
@@ -68,7 +69,7 @@
   <button type="submit" class="btn btn-secondary">Login</button>
 
 </form>
-<!-- {% endif %} -->
+{% endif %}
 
 {% endblock %}
 
