--- a/src/hr_management/req_leave/templates/manage_request.html
+++ b/src/hr_management/req_leave/templates/manage_request.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title> View Leave Requests</title>
+    <title>Manage</title>
 </head>
 <body>
-    <h1> View Leave Requests</h1>
+    <h1>Manage Requests</h1>
     <table>
         <thead>
             <tr>
@@ -14,6 +14,7 @@
                 <th>End Date</th>
                 <th>Request Type</th>
                 <th>Status</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -24,10 +25,22 @@
                 <td>{{ leave_request.end_date }}</td>
                 <td>{{ leave_request.request_type }}</td>
                 <td>{{ leave_request.request_status }}</td>
+                <td>
+                    <form method="post" action="{% url 'update_request_status' pk=leave_request.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="action" value="accept">
+                        <button type="submit">Accept</button>
+                    </form>
+                    <form method="post" action="{% url 'update_request_status' pk=leave_request.pk %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="action" value="decline">
+                        <button type="submit">Decline</button>
+                    </form>
+                </td>
             </tr>
             {% empty %}
             <tr>
-                <td colspan="5">No leave requests found.</td>
+                <td colspan="6">No leave requests found.</td>
             </tr>
             {% endfor %}
         </tbody>
