--- a/src/hr_management/req_leave/templates/request.html
+++ b/src/hr_management/req_leave/templates/request.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 
 {% load static %}
+{% load crispy_forms_tags %}
 
 <html>
 <head>
 
     <meta charset="UTF-8">
     <title> Leave Request </title>
-    <link rel="stylesheet" type="text/css" href="{% static 'ckeditor/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'req_leave/request.css' %}">
 
 </head>
 
@@ -16,7 +17,7 @@
 
     <form action="" method="POST"> {% csrf_token %}
 
-        {{ request_form.as_p }}
+        {{ request_form|crispy }}
 
         <input type="submit" value="Send"/>
     
