--- a/src/hr_management/req_leave/templates/view_request.html
+++ b/src/hr_management/req_leave/templates/view_request.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
+
+{% load static %}
+
 <html>
 <head>
     <meta charset="UTF-8">
     <title> View Leave Requests</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'req_leave/style.css' %}">
+
 </head>
 <body>
     <h1> View Leave Requests</h1>
+
     <table>
         <thead>
             <tr>
                 <th>Employee</th>
                 <th>Start Date</th>
                 <th>End Date</th>
+                <th> Days Requested </th>
                 <th>Request Type</th>
                 <th>Status</th>
+                <th>Action</th>  <!-- Added column for the action button -->
             </tr>
         </thead>
         <tbody>
@@ -22,12 +30,21 @@
                 <td>{{ leave_request.employee_id }}</td>
                 <td>{{ leave_request.start_date }}</td>
                 <td>{{ leave_request.end_date }}</td>
+                <td>{{ leave_request.days_requested }}</td>
                 <td>{{ leave_request.request_type }}</td>
                 <td>{{ leave_request.request_status }}</td>
+                
+                <!-- Remove Button -->
+                <td>
+                    <form method="post" action="{% url 'req_leave:cancel_request' id=leave_request.id %}">
+                        {% csrf_token %}
+                        <button type="submit" class="btn remove-button"> Remove </button>
+                    </form>
+                </td>
             </tr>
             {% empty %}
             <tr>
-                <td colspan="5">No leave requests found.</td>
+                <td colspan="7">No leave requests found.</td>
             </tr>
             {% endfor %}
         </tbody>
