--- a/src/hr_management/staticfiles/publication/style.css
+++ b/src/hr_management/staticfiles/publication/style.css
@@ -12,6 +12,10 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    text-align: center;
+}
+
 section {
     max-width: 800px;
     margin: 0 auto;
@@ -41,4 +45,45 @@ h1#publications-header {
 
 p {
     line-height: 1.6;
+}
+
+/* Buttons */
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+
+
+.edit-button {
+    border: 1px solid #ffb703;
+    background-color: #ffb703;
+    display: inline-block;
+    width: 48px;
+    margin-top: 3px;
+    margin-left: 3px;
+    transition: 0.16s;
+}
+
+.edit-button:hover {
+    background-color: #e1a201;
+
+}
+
+.remove-button {
+    border: 1px solid #fb8500;
+    background-color: #fb8500;
+    display: inline-block;
+    width: 107px;
+    margin-top: 5px;
+    margin-left: 3px;
+    transition: 0.16s;
+}
+
+.remove-button:hover {
+    background-color: #e07800;
+
 }
