--- a/src/hr_management/staticfiles/req_leave/style.css
+++ b/src/hr_management/staticfiles/req_leave/style.css
@@ -38,36 +38,31 @@ tr:hover {
 }
 
 button {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
     padding: 8px 16px;
     font-size: 14px;
     cursor: pointer;
     margin: 0 5px;
-    display: inline-block;
-}
-
-.accept-button,
-.decline-button {
-    border: 1px solid;
-    width: 100px;
-    display: inline-block;
-    margin-right: 5px;
-    transition: 0.32s;
 }
 
 .accept-button {
-    border-color: #8ecae6;
-    background-color: #8ecae6;
-    color: #000000;
+    border: 1px solid #ffb703;
+    background-color: #ffb703;
+    color: #fff;
+    transition: 0.3s;
 }
 
 .accept-button:hover {
-    background-color: #77b1cb;
+    background-color: #e1a201;
 }
 
 .decline-button {
-    border-color: #fb8500;
+    border: 1px solid #fb8500;
     background-color: #fb8500;
     color: #fff;
+    transition: 0.3s;
 }
 
 .decline-button:hover {
