Integrated Calendar backend (Absent Calendar and Publication Calendar) to Request management and Publications posting. Now adds when an employee'll be absent and when a publication is posted to their respective calendars. Implemented validation logic to request cancelling & approved / declined -- To Do, FullCalendar front end utizing the two Calendar's queries for day highlighting!

--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -35,9 +35,6 @@
     <!-- Showing all Publications -->
     <section>
 
-        <!-- Token can be removed -->
-        {% csrf_token %}
-
         {% for post in publication_post %}
         <h1>{{post.title}} Published: {{post.publication_date}}</h1>
         <p> {{post.body_description|safe}}
@@ -50,7 +47,7 @@
         <form method="post" 
         action="{% url 'publication:remove_publication' id=post.id %}">
 
-            {% csrf_token %}
+            <!-- {% csrf_token %} -->
 
             <button type="submit" class="btn remove-button">Remove</button>
 
