--- a/src/hr_management/req_leave/static/req_leave/style.css
+++ b/src/hr_management/req_leave/static/req_leave/style.css
@@ -12,6 +12,7 @@ h1 {
     text-align: center;
 }
 
+/* Viewing Requests */
 table {
     max-width: 800px;
     margin: 20px auto;
@@ -37,6 +38,7 @@ tr:hover {
     background-color: #f5f5f5;
 }
 
+/* Manage Buttons */
 button {
     padding: 8px 16px;
     font-size: 14px;
@@ -72,4 +74,24 @@ button {
 
 .decline-button:hover {
     background-color: #e07800;
+}
+
+
+/* Messages */
+.messages {
+    list-style: none;
+    padding: 10px;
+    margin: 20px auto;
+    max-width: 800px;
+    background-color: #033047;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(3, 48, 71);
+    border: 1px solid #ddd;
+}
+
+.messages li {
+    padding: 15px;
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid #fb8500;
 }
