Integrated Calendar's backend to newly developed Front-End page, utilizing FullCalendar library. Shows absent employees, newly posted publication counts on the Calendar, and contains a separate table containg their appropriate information

--- a/src/hr_management/publication/templates/create_publication.html
+++ b/src/hr_management/publication/templates/create_publication.html
@@ -47,7 +47,7 @@
         <form method="post" 
         action="{% url 'publication:remove_publication' id=post.id %}">
 
-            <!-- {% csrf_token %} -->
+            {% csrf_token %}
 
             <button type="submit" class="btn remove-button">Remove</button>
 
