--- a/src/hr_management/staticfiles/req_leave/style.css
+++ b/src/hr_management/staticfiles/req_leave/style.css
@@ -12,6 +12,7 @@ h1 {
     text-align: center;
 }
 
+/* Viewing Requests */
 table {
     max-width: 800px;
     margin: 20px auto;
@@ -37,34 +38,64 @@ tr:hover {
     background-color: #f5f5f5;
 }
 
+/* Manage Buttons */
 button {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
     padding: 8px 16px;
     font-size: 14px;
     cursor: pointer;
     margin: 0 5px;
+    display: inline-block;
+}
+
+.accept-button,
+.decline-button {
+    border: 1px solid;
+    width: 100px;
+    display: inline-block;
+    margin-right: 5px;
+    transition: 0.32s;
 }
 
 .accept-button {
-    border: 1px solid #ffb703;
-    background-color: #ffb703;
-    color: #fff;
-    transition: 0.3s;
+    border-color: #8ecae6;
+    background-color: #8ecae6;
+    color: #000000;
 }
 
 .accept-button:hover {
-    background-color: #e1a201;
+    background-color: #77b1cb;
 }
 
+.remove-button,
 .decline-button {
-    border: 1px solid #fb8500;
+    border-color: #fb8500;
     background-color: #fb8500;
     color: #fff;
-    transition: 0.3s;
+    transition: 0.16s;
 }
 
+.remove-button:hover,
 .decline-button:hover {
     background-color: #e07800;
+
+}
+
+
+/* Messages */
+.messages {
+    list-style: none;
+    padding: 10px;
+    margin: 20px auto;
+    max-width: 800px;
+    background-color: #033047;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgb(142, 202, 203);
+    border: 1px solid #ddd;
+}
+
+.messages li {
+    padding: 15px;
+    color: white;
+    text-align: center;
+    border-bottom: 1px solid #fb8500;
 }
