Authentication for custom user model 'Employee' is now working. Still debugging...

--- a/src/hr_management/user/templates/administrator/employee_record.html
+++ b/src/hr_management/user/templates/administrator/employee_record.html
@@ -28,6 +28,12 @@
             <strong>Available Paid Sick Days: </strong>{{ employee_record.available_sickdays }}</p>
 
             <p class="card-text">
+                <strong>Is Staff: </strong>{{ employee_record.is_staff }}</p>
+
+            <p class="card-text">
+                <strong>Is Superuser: </strong>{{ employee_record.is_superuser }}</p>
+
+            <p class="card-text">
             <strong>Username: </strong>{{ employee_record.username }}</p>
 
             <p class="card-text">
