--- a/src/hr_management/user/templates/base.html
+++ b/src/hr_management/user/templates/base.html
@@ -29,7 +29,7 @@
         </p>
         {% else %}
         <p class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
+            <a class="nav-link" href="{% url 'home' %}">Login</a>
         </p>
         {% endif %}
 
