--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -7,6 +7,8 @@
 
 <nav class="navbar-section">
     <div class="container-fluid">
+    <div class="navbar-section-right">
+      <ul>
       <p class="nav-item">
         <a class="nav-link" href="{% url 'admin_home' %}">Home</a>
       </p>
