Added Logout to the nav bar area

--- a/src/hr_management/user/templates/navbar.html
+++ b/src/hr_management/user/templates/navbar.html
@@ -27,3 +27,15 @@
       </div>
     </div>
 </nav>
+
+<!-- Create a breack line between the two navbars -->
+<hr>
+
+<nav class="navbar-section">
+      <div class="navbar-section-right">
+        <ul>
+          <p class="nav-item">
+            <a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
+          </p>
+        </ul>
+</nav>
