--- a/src/hr_management/user/templates/administrator/employee_record.html
+++ b/src/hr_management/user/templates/administrator/employee_record.html
@@ -8,10 +8,12 @@
         <div class="card-header"><strong>
     	    {{ employee_record.first_name }} 
 		    {{ employee_record.last_name }}</strong>
-            <a href="{% url 'update_employee' employee_record.id%}" class="btn btn-secondary">Update Record</a>
         </div>
 
         <div class="card-body">
+            <p class="card-text">
+            <strong>Username: </strong>{{ employee_record.username }}</p>
+
             <p class="card-text">
             <strong>Email: </strong>{{ employee_record.email }}</p>
 
@@ -34,20 +36,18 @@
                 <strong>Is Superuser: </strong>{{ employee_record.is_superuser }}</p>
 
             <p class="card-text">
-            <strong>Username: </strong>{{ employee_record.username }}</p>
-
-            <p class="card-text">
             <strong>password: </strong>{{ employee_record.password }}</p> <!--wonder if django manages the passoword and we don't need to store it-->
 
             <p class="card-text">
             <strong>ID: </strong>{{ employee_record.id }}</p>
+
+            <div class="d-grid gap-2 d-md-block">
+                <a href="{% url 'manage_employees' %}" class="btn btn-info">Back</a>
+                <a href="{% url 'update_employee' employee_record.id%}" class="btn btn-warning">Update Record</a>
+                <a href="{% url 'delete_employee' employee_record.id %}" class="btn btn-danger">Delete</a>
+            </div>
         </div>
     </div>
 </div>
-
-<a href="{% url 'manage_employees' %}" class="btn btn-secondary">Back</a>
-
-<br/><br/>
-<a href="{% url 'delete_employee' employee_record.id %}" class="btn btn-danger">Delete</a>
 
 {% endblock %}
