Made visual changes
Added the hyper link to the button instead of the text

--- a/src/hr_management/user/templates/administrator/admin_home.html
+++ b/src/hr_management/user/templates/administrator/admin_home.html
@@ -9,23 +9,22 @@
             <div class="division-4-item">
                 <h4>Manage Employee</h4>
                 <p>We can add, edit and remove employees. See employee information.</p>
-
-                <button class="btn btn-info" type="button"><a href="{% url 'manage_employees' %}">Manage Employees</a></button>
+                <a href="{% url 'manage_employees' %}"><button class="btn btn-info" type="button">Manage Employees</button></a>
             </div>
             <div class="division-4-item">
                 <h4>Mange Requests</h4>
                 <p>View and manage employee requests.</p>
-                <button class="btn btn-info" type="button"><a href="{% url 'tmp' %}">Manage Requests</a></button>
+                <a href="{% url 'tmp' %}"><button class="btn btn-info" type="button">Manage Requests</button></a>
             </div>
             <div class="division-4-item">
                 <h4>View Calendar</h4>
                 <p>View the company calendar. See employee PTO and sick days</p>
-                <button class="btn btn-info" type="button"><a href="{% url 'tmp' %}">View Calendar</a></button>
+                <a href="{% url 'tmp' %}"><button class="btn btn-info" type="button">View Calendar</button></a>
             </div>
             <div class="division-4-item">
                 <h4>View Publications</h4>
                 <p>View company publications. Add, edit and remove publications</p>
-                <button class="btn btn-info" type="button"><a href="{% url 'tmp' %}">Publications</a></button>
+                <a href="{% url 'tmp' %}"><button class="btn btn-info" type="button">Publications</button></a>
             </div>
         </div>
    </div>
