--- a/src/hr_management/user/templates/administrator/manage_employees.html
+++ b/src/hr_management/user/templates/administrator/manage_employees.html
@@ -11,7 +11,10 @@
 {% if user.is_authenticated %}
   
 </div>
-  <a href="{% url 'register_employee' %}" class="btn btn-secondary">Register Employee</a>
+<div style="text-align: right;">
+  <a href="{% url 'register_employee' %}" class="btn btn-warning">Register Employee </a>
+</div>
+
 <br/><br/>
 
 <table class="table table-striped table-hover table-bordered">
@@ -29,11 +32,12 @@
     {% if employees %}
       {% for employee in employees %}
         <tr>
-          <td><a href="{% url 'employee_record' employee.id %}">{{ employee.first_name }} {{ employee.last_name }}</a></td>
+          <td>{{ employee.first_name }} {{ employee.last_name }}</td>
           <td>{{ employee.email }}</td>
           <td>{{ employee.employee_type }}</td>
           <td>{{ employee.phone }}</td>
           <td>{{ employee.id }}</td>
+          <td><a href="{% url 'employee_record' employee.id %}" class="btn btn-info">Edit</a> </td>
         </tr>
       {% endfor %}
     {% endif %}
