Changed color of button

--- a/src/hr_management/user/templates/administrator/update_employee.html
+++ b/src/hr_management/user/templates/administrator/update_employee.html
@@ -13,7 +13,7 @@
         {{ form.as_p }}
     
     <br/>
-    <button type="submit" class="btn btn-secondary">Update Employee</button>    
+    <button type="submit" class="btn btn-warning">Update Employee</button>
     
     </form>
     
